@@ -1,1 +1,6 @@
-11-26-2010: Initial release.
+11-26-2010
+* Initial release.
+
+12-01-2010
+* Fixed ASL close bug.
+* Updated unit tests.
